// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFormal renders as OcInput of type radio 1`] = `
<FormalOcInput
  inputType="radio"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  meta={Object {}}
  name="dummy-name"
  onChange={[Function]}
>
  <OcInput
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {},
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    name="dummy-name"
    onBlur={[Function]}
    onChange={[Function]}
    type="radio"
  >
    <div
      className="form-group OcInput-form-group-unfilled"
    >
      <div
        className="OcInput custom-control custom-radio"
      >
        <input
          checked={false}
          className="custom-control-input"
          name="dummy-name"
          onClick={[Function]}
          readOnly={true}
          type="radio"
        />
        <label
          className="custom-control-label"
        />
      </div>
    </div>
  </OcInput>
</FormalOcInput>
`;

exports[`withFormal succeeds at shallow mount with min props 1`] = `
<MyInput
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  name="dummy-name"
  onBlur={[Function]}
  onChange={[Function]}
/>
`;
